[package]
name = "tree-samples-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bst_benches"
harness = false